Bugs fixed and improved accesibility

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 		<div class="dashboard">
 			<header>
 				<h1>Resumen Anual</h1>
-				<label class="material-symbols-outlined" for="dark-mode">dark_mode</label>
+				<label class="material-symbols-outlined" tabindex="0" for="dark-mode" aria-label="Activar modo oscuro">dark_mode</label>
 			</header>
 			<div class="content">
-				<section>
+				<nav>
 					<h2>Secciones</h2>
-					<ul>
+					<ul role="Lista de gráficos">
 						<li>
 							<a href=#1>Gráfico 1</a>
 						</li>
@@ -70,7 +70,7 @@
 							<a href=#16>Gráfico 16</a>
 						</li>					
 					</ul>
-				</section>
+				</nav>
 				<main>
 					<img src="images/grafico1.jpg" id="1">
 					<img src="images/grafico7.jpg" id="2">
