Improved display on mobile devices

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<input type="checkbox" id="dark-mode">
 		<div class="dashboard">
 			<header>
-				<h1>Resumen Anual</h1>
-				<label class="material-symbols-outlined" tabindex="0" for="dark-mode" aria-label="Activar modo oscuro">dark_mode</label>
+				<h1>Resumen <span>Anual</span></h1>
+				<label class="material-symbols-outlined" for="dark-mode" aria-label="Activar modo oscuro">dark_mode</label>
 			</header>
 			<div class="content">
 				<nav>
