--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+		<link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" as="style" onload="this.onload=null;this.rel='stylesheet'">
 		<title>Dashboard</title>
 	</head>
 	<body>
@@ -78,16 +78,16 @@
 					<img src="images/grafico2.jpg" id="4">
 					<img src="images/grafico5.jpg" id="5">
 					<img src="images/grafico6.jpg" id="6">
-					<img src="images/grafico3.jpg" id="7">
-					<img src="images/grafico4.jpg" id="8">
-					<img src="images/grafico1.jpg" id="9">
-					<img src="images/grafico5.jpg" id="10">
-					<img src="images/grafico6.jpg" id="11">
-					<img src="images/grafico3.jpg" id="12">
-					<img src="images/grafico4.jpg" id="13">
-					<img src="images/grafico2.jpg" id="14">
-					<img src="images/grafico7.jpg" id="15">
-					<img src="images/grafico8.jpg" id="16">
+					<img src="images/grafico3.jpg" id="7" loading="lazy">
+					<img src="images/grafico4.jpg" id="8" loading="lazy">
+					<img src="images/grafico1.jpg" id="9" loading="lazy">
+					<img src="images/grafico5.jpg" id="10" loading="lazy">
+					<img src="images/grafico6.jpg" id="11" loading="lazy">
+					<img src="images/grafico3.jpg" id="12" loading="lazy">
+					<img src="images/grafico4.jpg" id="13" loading="lazy">
+					<img src="images/grafico2.jpg" id="14" loading="lazy">
+					<img src="images/grafico7.jpg" id="15" loading="lazy">
+					<img src="images/grafico8.jpg" id="16" loading="lazy">
 				</main>
 			</div>
 			<footer>
