--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-		<link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" as="style" onload="this.onload=null;this.rel='stylesheet'">
+		<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=swap" rel="stylesheet">
 		<title>Dashboard</title>
 	</head>
 	<body>
@@ -15,7 +15,7 @@
 		<div class="dashboard">
 			<header>
 				<h1>Resumen <span>Anual</span></h1>
-				<label class="material-symbols-outlined" for="dark-mode" aria-label="Activar modo oscuro">dark_mode</label>
+				<label class="material-symbols-outlined" tabindex="0" for="dark-mode" aria-label="Activar modo oscuro" style="font-family: 'Material Symbols Outlined', sans-serif;">dark_mode</label>
 			</header>
 			<div class="content">
 				<nav>
