--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 	<html lang="es">
 	<head>
+		<style>
+			h1{
+			font-family: 'Montserrat', sans-serif;
+			font-size: clamp(14px, 2.5vw, 50px);
+			color: white;
+			}
+		</style>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width", initial-scale=1.0>
 		<link rel="stylesheet" href="styles.css">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+		<link rel="preload" href="https://fonts.googleapis.com">
+		<link rel="preload" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
 		<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=swap" rel="stylesheet">
 		<title>Dashboard</title>
 	</head>
@@ -20,7 +27,7 @@
 			<div class="content">
 				<nav>
 					<h2>Secciones</h2>
-					<ul role="Lista de gráficos">
+					<ul role="navigation">
 						<li>
 							<a href=#1>Gráfico 1</a>
 						</li>
@@ -72,22 +79,22 @@
 					</ul>
 				</nav>
 				<main>
-					<img src="images/grafico1.jpg" id="1">
-					<img src="images/grafico7.jpg" id="2">
-					<img src="images/grafico8.jpg" id="3">
-					<img src="images/grafico2.jpg" id="4">
-					<img src="images/grafico5.jpg" id="5">
-					<img src="images/grafico6.jpg" id="6">
-					<img src="images/grafico3.jpg" id="7" loading="lazy">
-					<img src="images/grafico4.jpg" id="8" loading="lazy">
-					<img src="images/grafico1.jpg" id="9" loading="lazy">
-					<img src="images/grafico5.jpg" id="10" loading="lazy">
-					<img src="images/grafico6.jpg" id="11" loading="lazy">
-					<img src="images/grafico3.jpg" id="12" loading="lazy">
-					<img src="images/grafico4.jpg" id="13" loading="lazy">
-					<img src="images/grafico2.jpg" id="14" loading="lazy">
-					<img src="images/grafico7.jpg" id="15" loading="lazy">
-					<img src="images/grafico8.jpg" id="16" loading="lazy">
+					<img alt="Gráfico 1" src="images/grafico1.jpg" id="1">
+					<img alt="Gráfico 2" src="images/grafico7.jpg" id="2">
+					<img alt="Gráfico 3" src="images/grafico8.jpg" id="3">
+					<img alt="Gráfico 4" src="images/grafico2.jpg" id="4">
+					<img alt="Gráfico 5" src="images/grafico5.jpg" id="5">
+					<img alt="Gráfico 6" src="images/grafico6.jpg" id="6">
+					<img alt="Gráfico 7" src="images/grafico3.jpg" id="7" loading="lazy">
+					<img alt="Gráfico 8" src="images/grafico4.jpg" id="8" loading="lazy">
+					<img alt="Gráfico 9" src="images/grafico1.jpg" id="9" loading="lazy">
+					<img alt="Gráfico 10" src="images/grafico5.jpg" id="10" loading="lazy">
+					<img alt="Gráfico 11" src="images/grafico6.jpg" id="11" loading="lazy">
+					<img alt="Gráfico 12" src="images/grafico3.jpg" id="12" loading="lazy">
+					<img alt="Gráfico 13" src="images/grafico4.jpg" id="13" loading="lazy">
+					<img alt="Gráfico 14" src="images/grafico2.jpg" id="14" loading="lazy">
+					<img alt="Gráfico 15" src="images/grafico7.jpg" id="15" loading="lazy">
+					<img alt="Gráfico 16" src="images/grafico8.jpg" id="16" loading="lazy">
 				</main>
 			</div>
 			<footer>
