Changed .jpg for .webp images

--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@
 					</ul>
 				</nav>
 				<main>
-					<img alt="Gráfico 1" src="images/grafico1.jpg" id="1">
-					<img alt="Gráfico 2" src="images/grafico7.jpg" id="2">
-					<img alt="Gráfico 3" src="images/grafico8.jpg" id="3">
-					<img alt="Gráfico 4" src="images/grafico2.jpg" id="4">
-					<img alt="Gráfico 5" src="images/grafico5.jpg" id="5">
-					<img alt="Gráfico 6" src="images/grafico6.jpg" id="6">
-					<img alt="Gráfico 7" src="images/grafico3.jpg" id="7" loading="lazy">
-					<img alt="Gráfico 8" src="images/grafico4.jpg" id="8" loading="lazy">
-					<img alt="Gráfico 9" src="images/grafico1.jpg" id="9" loading="lazy">
-					<img alt="Gráfico 10" src="images/grafico5.jpg" id="10" loading="lazy">
-					<img alt="Gráfico 11" src="images/grafico6.jpg" id="11" loading="lazy">
-					<img alt="Gráfico 12" src="images/grafico3.jpg" id="12" loading="lazy">
-					<img alt="Gráfico 13" src="images/grafico4.jpg" id="13" loading="lazy">
-					<img alt="Gráfico 14" src="images/grafico2.jpg" id="14" loading="lazy">
-					<img alt="Gráfico 15" src="images/grafico7.jpg" id="15" loading="lazy">
-					<img alt="Gráfico 16" src="images/grafico8.jpg" id="16" loading="lazy">
+					<img alt="Gráfico 1" src="images/grafico1.webp" id="1">
+					<img alt="Gráfico 2" src="images/grafico7.webp" id="2">
+					<img alt="Gráfico 3" src="images/grafico8.webp" id="3">
+					<img alt="Gráfico 4" src="images/grafico2.webp" id="4">
+					<img alt="Gráfico 5" src="images/grafico5.webp" id="5">
+					<img alt="Gráfico 6" src="images/grafico6.webp" id="6">
+					<img alt="Gráfico 7" src="images/grafico3.webp" id="7" loading="lazy">
+					<img alt="Gráfico 8" src="images/grafico4.webp" id="8" loading="lazy">
+					<img alt="Gráfico 9" src="images/grafico1.webp" id="9" loading="lazy">
+					<img alt="Gráfico 10" src="images/grafico5.webp" id="10" loading="lazy">
+					<img alt="Gráfico 11" src="images/grafico6.webp" id="11" loading="lazy">
+					<img alt="Gráfico 12" src="images/grafico3.webp" id="12" loading="lazy">
+					<img alt="Gráfico 13" src="images/grafico4.webp" id="13" loading="lazy">
+					<img alt="Gráfico 14" src="images/grafico2.webp" id="14" loading="lazy">
+					<img alt="Gráfico 15" src="images/grafico7.webp" id="15" loading="lazy">
+					<img alt="Gráfico 16" src="images/grafico8.webp" id="16" loading="lazy">
 				</main>
 			</div>
 			<footer>
